tests/paczka2/big_fuzzy/52471515.err
Error in line 7: 2rw A680 55,1
Error in line 10: 2rw A569 20,7
Error in line 30: 2rw A569 12,8
Error in line 32: 0o4RFJYl3mY A680 60,73
Error in line 53: 0o4RJYl3mY A976 45,5
Error in line 66: N7dt A976 46,4
Error in line 63: cANc6Q3 A976 38,2
Error in line 81: ebFkr9M3 A680 4,8
Error in line 82: ebFkr9M3 S931 69,0
Error in line 87: A569 A569 13,5
Error in line 90: 0o4RFJYl3mY A976 15,5
Error in line 92: A569 A680 96,3
Error in line 88: ebFkr9M3 A569 37,1
Error in line 84: oy0rqT A976 172,5
Error in line 110: cANc6Q3 A680 231,59
Error in line 113: ebFkr9M3 A680 155,78
Error in line 106: oy0rqT A680 90,5
Error in line 79: 2rw A680 78,3
Error in line 120: A569 A569 86,87
Error in line 122: cANc6Q3 A680 85,2
Error in line 105: ebFkr9M3 A680 85,6
Error in line 124: cANc6Q3 A976 55,0
Error in line 121: A569 A569 145,7
Error in line 145: ebFkr9M3 A976 59,1
Error in line 146: 0o4RFJYl3mY A680 66,8
Error in line 147: ebFkr9M3 A680 29,2
Error in line 159: cANc6Q3 A68! 25,8
Error in line 154: 2rw S931 40,6
Error in line 160: oy0rqT A69 28,9
Error in line 168: A569 A680 77,2
Error in line 173: A569 A976 38,7
Error in line 165: cANc6Q3 A680 8,5
Error in line 183: &569 &680 46,5
Error in line 172: oy0rqT A569 45,1
Error in line 190: N7dt A569 -1,2
Error in line 191: oy0rqT S931 -1,6
Error in line 189: A569 A680 613,4
Error in line 180: N7dt A569 78,6
Error in line 188: cANc6Q3 A680 21,1
Error in line 205: 0o4RFJYl3mY S931 61,9
Error in line 200: N7dt S931 13,3
Error in line 187: oy0rqT S931 8,6
Error in line 209: ebFkr9M3 A569 65,1
Error in line 225: ebFkr9M3 A569 70,7
Error in line 234: 0o4RFJYl3mY S931 140,6
Error in line 236: N7dt A680 30,0
